Prevent flash of invisible text
Added `font-display: swap` to all font faces to prevent flash of invisible text.

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -14,6 +14,7 @@
        url('/fonts/nunito/nunito-v16-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('/fonts/nunito/nunito-v16-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('/fonts/nunito/nunito-v16-latin-regular.svg#Nunito') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 /* nunito-600 - latin */
 @font-face {
@@ -27,6 +28,7 @@
        url('/fonts/nunito/nunito-v16-latin-600.woff') format('woff'), /* Modern Browsers */
        url('/fonts/nunito/nunito-v16-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
        url('/fonts/nunito/nunito-v16-latin-600.svg#Nunito') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 /* nunito-800 - latin */
 @font-face {
@@ -40,6 +42,7 @@
        url('/fonts/nunito/nunito-v16-latin-800.woff') format('woff'), /* Modern Browsers */
        url('/fonts/nunito/nunito-v16-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
        url('/fonts/nunito/nunito-v16-latin-800.svg#Nunito') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 
 
@@ -56,6 +59,7 @@
        url('/fonts/zilla-slab/zilla-slab-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('/fonts/zilla-slab/zilla-slab-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('/fonts/zilla-slab/zilla-slab-v6-latin-regular.svg#ZillaSlab') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 /* zilla-slab-500 - latin */
 @font-face {
@@ -69,6 +73,7 @@
        url('/fonts/zilla-slab/zilla-slab-v6-latin-500.woff') format('woff'), /* Modern Browsers */
        url('/fonts/zilla-slab/zilla-slab-v6-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
        url('/fonts/zilla-slab/zilla-slab-v6-latin-500.svg#ZillaSlab') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 /* zilla-slab-600 - latin */
 @font-face {
@@ -82,6 +87,7 @@
        url('/fonts/zilla-slab/zilla-slab-v6-latin-600.woff') format('woff'), /* Modern Browsers */
        url('/fonts/zilla-slab/zilla-slab-v6-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
        url('/fonts/zilla-slab/zilla-slab-v6-latin-600.svg#ZillaSlab') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 /* zilla-slab-700 - latin */
 @font-face {
@@ -95,4 +101,5 @@
        url('/fonts/zilla-slab/zilla-slab-v6-latin-700.woff') format('woff'), /* Modern Browsers */
        url('/fonts/zilla-slab/zilla-slab-v6-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('/fonts/zilla-slab/zilla-slab-v6-latin-700.svg#ZillaSlab') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
